# mcp-client-for-ollama

./: DEV.md  LICENSE  README.md  SECURITY.md  client.py  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  publish.yml
cli-package/: README.md  pyproject.toml
cli-package/ollmcp/: cli.py
cli-package/tests/: __init__.py  conftest.py  test_cli_import.py
mcp_client_for_ollama/: __init__.py  __main__.py  cli.py  client.py
mcp_client_for_ollama/config/: defaults.py  manager.py
mcp_client_for_ollama/models/: config_manager.py  manager.py
mcp_client_for_ollama/server/: connector.py  discovery.py
mcp_client_for_ollama/tools/: manager.py
mcp_client_for_ollama/utils/: constants.py  fzf_style_completion.py  hil_manager.py  metrics.py  streaming.py  tool_display.py  version.py
scripts/: bump_version.py
tests/: __init__.py  test_server_discovery.py  test_version.py
